emlyon correction alignement final

--- a/candidature_emlyon/style.css
+++ b/candidature_emlyon/style.css
@@ -176,7 +176,7 @@ h3 {
 
 .text-block { 
     margin-bottom: 3rem; 
-    text-align: left;
+    text-align: center;
 }
 
 /* Profil */
